# full-steam-ahead

./: README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml  test.yml
src/: App.vue  api.ts  sourceNames.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: add-to-path.nsi
src-tauri/src/: backups.rs  commands.rs  error.rs  lib.rs  main.rs  models.rs  paths.rs  process.rs
src-tauri/src/commands/: backups.rs  mod.rs  settings.rs  steam.rs
src-tauri/src/importers/: amazon.rs  bottles.rs  epic.rs  flatpak.rs  game_pass.rs  gamepass.rs  gog.rs  heroic.rs  itch.rs  legendary.rs  lutris.rs  manual.rs  minigalaxy.rs  mod.rs  origin.rs  playnite.rs  proton.rs  ubisoft.rs
src-tauri/src/models/: events.rs  importers.rs  mod.rs  plan.rs  settings.rs  steam.rs
src-tauri/src/steam/: apply.rs  artwork.rs  collections.rs  detect.rs  mod.rs  plan.rs  shortcuts.rs  sources.rs
src-tauri/src/steam/artwork/: fetch.rs  mod.rs
src-tauri/src/steam/detect/: install.rs  mod.rs  users.rs
src/app/: settings.ts
src/assets/: main.css
src/assets/icons/: minigalaxy.avif
src/components/: AppFrame.vue  AppShell.vue  BottomActionBar.vue  GameIcon.vue  SourceCard.vue  SourceIcon.vue  TitleBar.vue  UserAvatar.vue
src/components/ui/: Button.vue  Checkbox.vue  Dropdown.vue  ItemRow.vue  Toggle.vue
src/composables/: useAppState.ts  useReviewPlan.ts  useScanSources.ts  useTaskStatus.ts
src/domain/: sourceNames.ts
src/entrypoints/app/: App.vue  main.ts  router.ts
src/entrypoints/app/views/: ArtworkView.vue  DoneView.vue  ImportFlowView.vue  ReviewView.vue  SettingsView.vue  SourcesView.vue  StartView.vue
src/helpers/: api.ts  settings.ts  sourceNames.ts
src/router/: index.ts
src/state/: appState.ts
src/types/: events.ts  import.ts  index.ts  plan.ts  steam.ts
src/views/: ArtworkView.vue  ImportFlowView.vue  ReviewView.vue  SettingsView.vue  SourcesView.vue
