[package]
name = "full-steam-ahead"
version = "0.1.0"
description = "A desktop utility for importing non-Steam games."
authors = ["Creeperkatze"]
license = "GPL-3.0-only"
homepage = "https://github.com/creeperkatze/full-steam-ahead"
repository = "https://github.com/creeperkatze/full-steam-ahead"
edition = "2021"

[lib]
name = "full_steam_ahead_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fsa"
path = "src/bin/cli/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
crc32fast = "1.5.0"
dirs = "5"
flate2 = "1"
nom = "7"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-opener = "2"
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[lints.clippy]
bool_to_int_with_if = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
manual_assert = "warn"
manual_let_else = "warn"
match_bool = "warn"
needless_collect = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
todo = "warn"
too_many_arguments = "allow"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"

[target.'cfg(windows)'.dependencies]
sqlite = "0.36"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
winreg = "0.52"
